--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,6 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-# Simulation Plots, keep directory structure but not files
-plots/laps/*
-plots/cross_country/*
+# Simulation Plots - ignore entire directories
+plots/cross_country/
+plots/laps/
